# NOVA

./: .gitignore  README.md  pyproject.toml
.specify/memory/: constitution.md
specs/001-health-bot-mvp/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/001-health-bot-mvp/checklists/: requirements.md
specs/002-group-chat-mention/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-group-chat-mention/checklists/: requirements.md
specs/003-short-informative-responses/: data-model.md  plan.md  research.md  spec.md  tasks.md  test-plan.md
specs/003-short-informative-responses/checklists/: requirements.md
specs/004-topic-mention/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/005-group-onboarding-prompt/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-automate-google-sheet/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-sheet-editor-prompt/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-nova-only-profile-dm/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-nova-profile-flow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-friendly-prompts-sheet-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/nova/: cli.py
tests/: conftest.py
tests/integration/: test_e2e.py
tests/unit/: test_agent_tools.py  test_config.py  test_db.py  test_handlers.py  test_onboarding.py  test_responses.py  test_sheets.py  test_urls.py
(+33 files in other folders)
